// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentProfile view renders correctly -> student's view 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginLeft": 26,
      "marginRight": 26,
      "marginTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "maxHeight": 60,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Image
          source={
            Object {
              "uri": "https://images.unsplash.com/photo-1535643302794-19c3804b874b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80",
            }
          }
          style={
            Object {
              "borderRadius": 27,
              "height": 54,
              "width": 54,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "marginLeft": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          test
        </Text>
        <View>
          <Text>
             
            שיעורים
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://images.unsplash.com/photo-1535643302794-19c3804b874b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80",
          }
        }
        style={
          Object {
            "borderRadius": 12,
            "height": 24,
            "marginLeft": 12,
            "marginTop": -2,
            "width": 24,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "elevation": 6,
        "marginTop": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.09,
        "shadowRadius": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(121, 121, 121)",
            "fontWeight": "bold",
          }
        }
        testID="monthlyAmount"
      >
        נושאים
      </Text>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "marginLeft": "auto",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
              underlayColor="white"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 20,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Image
            style={
              Object {
                "alignSelf": "center",
                "height": 150,
                "width": 200,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#e1e1e1",
                "fontSize": 28,
                "fontWeight": "bold",
                "marginTop": 40,
              }
            }
          >
            עוד לא נלמדו נושאים
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`StudentProfile view renders correctly -> teacher's view 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginLeft": 26,
      "marginRight": 26,
      "marginTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "maxHeight": 60,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Image
          source={
            Object {
              "uri": "https://images.unsplash.com/photo-1535643302794-19c3804b874b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80",
            }
          }
          style={
            Object {
              "borderRadius": 27,
              "height": 54,
              "width": 54,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "marginLeft": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          test
        </Text>
        <View>
          <Text>
             
            שיעורים
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://images.unsplash.com/photo-1535643302794-19c3804b874b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80",
          }
        }
        style={
          Object {
            "borderRadius": 12,
            "height": 24,
            "marginLeft": 12,
            "marginTop": -2,
            "width": 24,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "elevation": 6,
        "marginTop": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.09,
        "shadowRadius": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(121, 121, 121)",
          "fontWeight": "bold",
        }
      }
      testID="schedule"
    >
      שיעור הבא
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/lessons.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "height": 150,
            "width": 200,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#e1e1e1",
            "fontSize": 28,
            "fontWeight": "bold",
            "marginTop": 40,
          }
        }
      >
        אין לך שיעורים!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "elevation": 6,
        "marginTop": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.09,
        "shadowRadius": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(121, 121, 121)",
          "fontWeight": "bold",
        }
      }
      testID="schedule"
    >
      מאזן כספי
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "marginTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(24, 199, 20)",
            "fontFamily": "Assistant-Light",
            "fontSize": 44,
          }
        }
      >
        900
        ₪
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "rgb(212, 212, 212)",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "marginTop": 20,
          "width": "100%",
        }
      }
    />
    <RCTScrollView
      ListEmptyComponent={[Function]}
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/payments.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 150,
                "width": 200,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#e1e1e1",
                "fontSize": 28,
                "fontWeight": "bold",
                "marginTop": 40,
              }
            }
          >
            אין לך תשלומים!
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "elevation": 6,
        "marginTop": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.09,
        "shadowRadius": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(121, 121, 121)",
            "fontWeight": "bold",
          }
        }
        testID="monthlyAmount"
      >
        נושאים
      </Text>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "marginLeft": "auto",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
              underlayColor="white"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 20,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Image
            style={
              Object {
                "alignSelf": "center",
                "height": 150,
                "width": 200,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#e1e1e1",
                "fontSize": 28,
                "fontWeight": "bold",
                "marginTop": 40,
              }
            }
          >
            עוד לא נלמדו נושאים
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
